<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="212dp"
        android:padding="20dp"
        android:text="@string/point_1"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="151dp"
        android:padding="20sp"
        android:text="@string/point_2"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="94dp"
        android:padding="20dp"
        android:text="@string/point_3"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="44dp"
        android:padding="20dp"
        android:text="@string/example"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azureColorPrimary"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/azureColorPrimary">


        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="107dp"
        android:text="@string/title_record"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="173dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/enter_keyword"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_margin="20sp"
            android:background="@drawable/bottom_line"
            android:cursorVisible="true"
            android:hint="@string/enter_keyword"
            android:keepScreenOn="false"
            android:singleLine="false"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="30sp" />


    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/ok_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="174dp"
        android:layout_weight="1"
        android:text="@string/ok"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>